# pr2-python-minimal

./: CMakeLists.txt  mainpage.dox  setup.py  stack.xml
nosetests/: tests.py
pr2_python/: CMakeLists.txt  manifest.xml  package.xml  rosdoc.yaml  setup.py
pr2_python/nodes/: posegossip.py
pr2_python/src/pr2_python/: visualization_tools.py
pr2_python/test/: arm_move_cartesian.py  arm_move_cartesian_control.py  arm_move_nonblock.py  cartesian_tracking.py  follow_trajectory.py  get_base_poses.py  joint_state_control.py  move_base.py  move_torso.py  pointclouds.py
state_transformer/: manifest.xml
test/: arm_in_collision.py  arm_move_joint_state.py  controller_manager.py  get_arm_ik.py  look_at.py  move_base_to_look.py  move_base_to_object.py  move_gripper.py  move_out_of_collision.py  transform_listener.py
