<package>
  <name>pr2_python</name>
  <version>1.0.0</version>
  <description>A Python library to simplify executing actions on the PR2</description>
  <maintainer email="dan@lazewatsky.com">Dan Lazewatsky</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/pr2_python</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Bhaskara Marthi</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>nav_msgs</build_depend>
  <build_depend>pr2_mechanism_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>nav_msgs</run_depend>
  <run_depend>pr2_mechanism_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>nav_msgs</test_depend> -->
  <!-- <test_depend>pr2_mechanism_msgs</test_depend> -->
  <!-- <test_depend>std_srvs</test_depend> -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>visualization_msgs</test_depend> -->
  <!-- <test_depend>move_base_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>pr2_controllers_msgs</test_depend> -->

</package>